# home-rs

./: .gitignore  Cargo.toml  README.md
.github/actions/linux-deps/: action.yml
.github/workflows/: ci.yml
assets/fonts/: roboto.json
assets/photos/: photo001.json  photo002.json  photo003.json  photo004.json
src/: app.rs  error.rs  main.rs
src/core/: app_loop.rs  camera.rs  clock.rs  gl_canvas.rs  gl_graphics.rs  gl_pipeline.rs  gl_renderer.rs  input.rs  mod.rs
src/gfx/: animation.rs  color_conversion.rs  color_format.rs  mod.rs
src/gl/: mod.rs  opengl.rs
src/gl/linux/: mod.rs
src/gl/win32/: mod.rs  window.rs
src/scene/: font.rs  layouter.rs  manager.rs  mod.rs  photo.rs  slideshow.rs
src/util/: datetime.rs  locale.rs  logger.rs  mod.rs  utf8.rs
src/v2d/: affine2x2.rs  affine4x4.rs  float_eq.rs  m2x2.rs  m3x3.rs  m4x4.rs  mod.rs  q.rs  r2.rs  v2.rs  v3.rs  v4.rs
